--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- Logo -->
         <div style="text-align:center; margin-bottom:20px;">
-            <img src="https://via.placeholder.com/100x100.png?text=LOGO" alt="Company Logo" style="display:block; margin:0 auto; width:100px; height:100px;">
+            <img src="images/swirl_logo.jpg" alt="Company Logo" style="display:block; margin:0 auto; width:100px; height:100px;">
         </div>
 
         <!-- Headline -->
@@ -22,13 +22,13 @@
 
         <!-- Hero Image -->
         <div style="text-align:center; margin-bottom:20px;">
-            <img src="https://via.placeholder.com/600x200.png?text=Hero+Image" alt="Hero Image" style="width:100%; height:auto; display:block;">
+            <img src="images/Pebble_Dash_(15366562092).png" alt="Pebbles Image" style="width:100%; height:auto; display:block;">
         </div>
 
         <!-- Body Text -->
         <div style="margin-bottom:20px; color:#555555; font-size:16px; line-height:1.5;">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
-            <p>Curabitur ut sem finibus, sollicitudin nunc at, convallis lectus. Quisque posuere purus vitae velit posuere, nec malesuada massa semper.</p>
+            <p>You have been selected for a special offer! ~ pebbles!</p>
+            <p>View your special price and shop other rocks at the link below.</p>
         </div>
 
         <!-- Button -->
@@ -39,7 +39,7 @@
         <!-- Footer -->
         <div style="font-size:12px; color:#888888; text-align:center;">
             <p>Feel free to <a href="#" style="color:#007BFF; text-decoration:none;">unsubscribe</a></p>
-            <p>1234 Main Street, City, State, ZIP</p>
+            <p>1234 Pebble Street, Rock Field, Rockesia, 9000</p>
         </div>
 
     </div>
